--- a/templates/pages/accounts.html
+++ b/templates/pages/accounts.html
@@ -1,41 +1,51 @@
 {% extends "base.html" %}
+{% load humanize %}
 
 {% block content %}
   <table class="table">
-  <thead>
+    <thead>
     <tr>
       <th scope="col">#</th>
       <th scope="col">ID</th>
-      <th scope="col">Amount</th>
+      <th scope="col">Name</th>
       <th scope="col">Created at</th>
-      <th scope="col">Origin acc</th>
-      <th scope="col">Origin client name</th>
-      <th scope="col">Origin acc city</th>
-      <th scope="col">Origin acc country</th>
-      <th scope="col">Destination acc</th>
-      <th scope="col">Destination client name</th>
+      <th scope="col">Client name</th>
+      <th scope="col">Origin trans</th>
+      <th scope="col">Destination trans</th>
       <th scope="col">Status</th>
+      <th scope="col">Provider</th>
+      <th scope="col">Type</th>
     </tr>
-  </thead>
-  <tbody>
-  {% for transaction in transactions %}
+    </thead>
+    <tbody>
+    {% for account in accounts %}
       <tr>
-      <th scope="row">{{ forloop.counter }}</th>
-      <td>{{ transaction.id }}</td>
-      <td>{{ transaction.amount }}</td>
-      <td>{{ transaction.created_at }}</td>
-      <td>{{ transaction.origin_account.name }}</td>
-      <td>{{ transaction.origin_account.client.name }}</td>
-      <td>{{ transaction.origin_account.city.name }}</td>
-      <td>{{ transaction.origin_account.city.country.name }}</td>
-      <td>{{ transaction.destination_account }}</td>
-      <td>{{ transaction.destination_account.client.name }}</td>
-      <td>{{ transaction.provider.name }}</td>
-      <td>{{ transaction.status.name }}</td>
-    </tr>
+        <th scope="row">{{ forloop.counter }}</th>
+        <td>{{ account.id }}</td>
+        <td>{{ account.name }}</td>
+        <td>{{ account.created_at }}</td>
+        <td>{{ account.client.name }}</td>
+        <td>
+          <ul>
+            {% for transaction in account.last_3_origin_transactions %}
+              <li>${{ transaction.amount|intcomma }} - {{ transaction.status.name }} </li>
+            {% endfor %}
+          </ul>
+        </td>
+        <td>
+          <ul>
+            {% for transaction in account.last_3_destination_transactions %}
+              <li>${{ transaction.amount|intcomma }} - {{ transaction.status.name }} </li>
+            {% endfor %}
+          </ul>
+        </td>
+        <td>{{ account.status.name }}</td>
+        <td>{{ account.provider.name }}</td>
+        <td>{{ account.type.name }}</td>
+      </tr>
 
-  {% endfor %}
+    {% endfor %}
 
-  </tbody>
-</table>
+    </tbody>
+  </table>
 {% endblock %}
